appId: ${APP_ID}
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Accept a payment"
    optional: true
- runFlow:
    when:
      notVisible: "Accept a payment"
    commands:
      - launchApp
      - extendedWaitUntil:
          visible: "Accept a payment"
          timeout: 30000
- tapOn: "Accept a payment"
- tapOn: "Prebuilt UI (single-step)"
- tapOn: "Checkout"
- extendedWaitUntil:
    visible: "TEST"
    timeout: 150000
- scrollUntilVisible:
    element:
      text: "BufoPay (test)"
    timeout: 150000
- tapOn:
    text: "BufoPay (test)"
- runFlow:
    when:
      platform: android
    commands:
      - scrollUntilVisible:
          element:
            id: "primary_button"
      - tapOn:
          id: "primary_button"
- runFlow:
    when:
      platform: ios
    commands:
      - scrollUntilVisible:
          element:
            text: "purchase!"
      - tapOn:
          text: "purchase!"
- extendedWaitUntil:
    visible: "Custom Payment Method"
    timeout: 30000
- assertVisible:
    text: "Processing payment with cpmt_1RlDWcCWPdGs21gLuSlYP6FB"
- tapOn: "Success"
- assertVisible:
    text: "The payment was confirmed successfully"
- tapOn: "OK"
