appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Accept a payment"
- tapOn: "Prebuilt UI (multi-step)"
- extendedWaitUntil:
    visible: "Choose payment method"
    timeout: 150000
- tapOn:
    text: "Choose payment method"
- extendedWaitUntil:
    visible: "TEST"
    timeout: 150000
- tapOn:
    text: "Card"
    optional: true
- tapOn:
    text: "Card number. Supported cards include.*"
- inputText: "4242424242424242"
- tapOn:
    text: "MM / YY"
    optional: true
- inputText: "0145"
- tapOn:
    text: "CVC"
- inputText: "123"
- scrollUntilVisible:
    element:
      id: primary_button # Android
    optional: true
- scrollUntilVisible:
    element:
      text: "Continue" # iOS
    optional: true
- tapOn:
    id: primary_button # Android
    optional: true
- tapOn:
    text: "Continue" # iOS
    optional: true
- tapOn:
    text: .*Buy.*
- assertVisible:
    text: "Success"
- tapOn: "OK"
