appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Bank Debits"
- tapOn: "SEPA Direct Debit payment"
- assertVisible:
    text: "E-mail"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- tapOn:
    text: "Iban"
- inputText: "AT611904300234573201"
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "Processing"
- tapOn: "OK"
